--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/user-event": "^12.8.3",
     "leaflet": "^1.7.1",
     "leaflet-draw": "^1.0.4",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-leaflet": "^3.1.0",
-    "react-leaflet-draw": "^0.19.7",
+    "leaflet-easybutton": "^2.4.0",
+    "react": "16.8.0",
+    "react-dom": "16.8.0",
+    "react-icons": "^4.3.1",
+    "react-leaflet": "2.7.0",
+    "react-leaflet-draw": "^0.19.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
   },
