--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "16.8.0",
     "react-icons": "^4.3.1",
     "react-leaflet": "2.7.0",
+    "react-leaflet-control": "^2.1.2",
     "react-leaflet-draw": "^0.19.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
