--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-leaflet-control": "^2.1.2",
     "react-leaflet-draw": "^0.19.0",
     "react-scripts": "4.0.3",
+    "reactjs-popup": "^2.0.5",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
