--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "leaflet-draw": "^1.0.4",
     "leaflet-easybutton": "^2.4.0",
     "react": "16.8.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "16.8.0",
     "react-icons": "^4.3.1",
     "react-leaflet": "2.7.0",
     "react-leaflet-control": "^2.1.2",
     "react-leaflet-draw": "^0.19.0",
+    "react-remove-scroll-bar": "^2.3.1",
     "react-scripts": "4.0.3",
     "reactjs-popup": "^2.0.5",
     "web-vitals": "^1.1.1"
