--- a/package.json
+++ b/package.json
@@ -3,23 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.8.3",
-    "leaflet": "^1.7.1",
-    "leaflet-draw": "^1.0.4",
-    "leaflet-easybutton": "^2.4.0",
+    "@testing-library/jest-dom": "5.11.9",
+    "@testing-library/react": "11.2.5",
+    "@testing-library/user-event": "12.8.3",
+    "leaflet": "1.7.1",
+    "leaflet-draw": "1.0.4",
     "react": "16.8.0",
-    "react-cookie": "^4.1.1",
     "react-dom": "16.8.0",
-    "react-icons": "^4.3.1",
+    "react-icons": "4.3.1",
     "react-leaflet": "2.7.0",
-    "react-leaflet-control": "^2.1.2",
-    "react-leaflet-draw": "^0.19.0",
-    "react-remove-scroll-bar": "^2.3.1",
+    "react-leaflet-control": "2.1.2",
+    "react-leaflet-draw": "0.19.0",
     "react-scripts": "4.0.3",
-    "reactjs-popup": "^2.0.5",
-    "web-vitals": "^1.1.1"
+    "reactjs-popup": "2.0.5",
+    "web-vitals": "1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
